--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         ];
 
         let allResponses = [
-            "✅ Fact: Surviving seven years can make a gift IHT-exempt, but Capital Gains Tax (CGT) may still apply. If the gifted asset has risen in value, you might face a CGT bill before IHT even comes into play. There are also anti-avoidance rules that prevent you from benefiting from gifted assets, meaning careful planning is key.",
+            "✅ Fact: Surviving seven years can make a gift IHT-exempt, but Capital Gains Tax (CGT) may still apply. If the gifted asset has risen in value, you might face a CGT bill before IHT even comes into play.",
             "✅ Fact: While many gifts require a seven-year wait to become IHT-free, some are immediately exempt. Gifts to UK charities, gifts out of regular income, and certain exemptions mean you don’t always have to wait.",
-            "✅ Fact: Business Relief may reduce or eliminate IHT on a business, but it is not automatic. The business must meet strict trading requirements, and certain assets may still be taxable. If Business Relief is unavailable or limited, a significant IHT liability could arise.",
-            "✅ Fact: Spouses and civil partners are generally exempt from IHT, but only if both are UK-domiciled. If one is non-domiciled, tax limitations apply. However, the surviving spouse may inherit unused IHT allowances, potentially increasing their tax-free threshold.",
+            "✅ Fact: Business Relief may reduce or eliminate IHT on a business, but it is not automatic. The business must meet strict trading requirements, and certain assets may still be taxable.",
+            "✅ Fact: Spouses and civil partners are generally exempt from IHT, but only if both are UK-domiciled. If one is non-domiciled, tax limitations apply. However, the surviving spouse may inherit unused IHT allowances.",
             "✅ Fact: IHT planning isn’t a one-time event. Changes in tax laws, personal circumstances, and financial markets mean your strategy should be reviewed regularly to stay tax-efficient and compliant.",
             "✅ Fact: While property plays a significant role in IHT, other assets like investments, savings, and personal belongings are also taxed. A holistic approach ensures all assets are considered in your estate planning."
         ];
@@ -140,22 +140,19 @@
         let myths, responses;
 
         function initializeChat() {
-            myths = [...allMyths]; 
-            responses = [...allResponses]; 
+            myths = [...allMyths];
+            responses = [...allResponses];
 
             let chatBox = document.getElementById("chat-box");
             chatBox.innerHTML = `
                 <div class="bot-message message">Welcome to the <b>Inheritance Tax MythBuster!</b> I’m here to help you separate fact from fiction when it comes to inheritance tax. Select a myth below, and I’ll provide you with accurate information.</div>
             `;
 
-            showMyths(false); // Default screen, no prompt message
+            showMyths(false);
         }
 
         function showMyths(showPrompt) {
             let chatBox = document.getElementById("chat-box");
-            let optionsDiv = document.createElement("div");
-            optionsDiv.id = "options";
-            chatBox.appendChild(optionsDiv);
 
             if (showPrompt && myths.length > 0) {
                 let promptMessage = document.createElement("div");
@@ -164,12 +161,16 @@
                 chatBox.appendChild(promptMessage);
             }
 
+            let optionsDiv = document.createElement("div");
+            optionsDiv.id = "options";
+            chatBox.appendChild(optionsDiv);
+
             myths.forEach((myth, index) => {
                 let mythOption = document.createElement("div");
                 mythOption.className = "bot-message message selectable";
                 mythOption.innerHTML = myth;
                 mythOption.onclick = function () {
-                    selectMyth(index, myth);
+                    selectMyth(index);
                 };
                 optionsDiv.appendChild(mythOption);
             });
@@ -177,12 +178,12 @@
             autoScroll();
         }
 
-        function selectMyth(index, selectedMyth) {
+        function selectMyth(index) {
             let chatBox = document.getElementById("chat-box");
 
             let userMessage = document.createElement("div");
             userMessage.className = "user-message message";
-            userMessage.innerHTML = selectedMyth;
+            userMessage.innerHTML = myths[index];
             chatBox.appendChild(userMessage);
 
             let typingIndicator = document.createElement("div");
@@ -203,12 +204,21 @@
                 myths.splice(index, 1);
                 responses.splice(index, 1);
 
-                showMyths(true); // Now show the prompt
+                if (myths.length > 0) {
+                    showMyths(true);
+                }
             }, 2000);
         }
 
         function resetChat() {
             initializeChat();
+        }
+
+        function autoScroll() {
+            let chatBox = document.getElementById("chat-box");
+            setTimeout(() => {
+                chatBox.scrollTop = chatBox.scrollHeight;
+            }, 100);
         }
     </script>
 
